flux/apps/ai/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: default
spec:
  selector:
    matchLabels:
      app: open-webui
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: openwebui/open-webui:0.12.0
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              # memory: 100Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: open-webui-data
              mountPath: /app/backend/data
      volumes:
        - name: open-webui-data
          nfs:
            server: datasphere
            path: /Root/Volumes/open-webui
