flux/apps/ai/open-webui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ai-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`ai.home`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ai-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ai.arlodev.co.uk`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ai-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ai.arlodev.co.uk`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
  tls:
    secretName: cert-ai
